# ai-fly

./: .gitignore  CLAUDE.md  aviation_ai_agent_competition_plan.md  翼修通：面向航空制造与运维场景的智能排故协同 Agent.md
yixiutong-mvp/: .env.example  README.md  pyproject.toml  pytest.ini
yixiutong-mvp/apps/api/app/: main.py
yixiutong-mvp/apps/api/app/agents/: audit.py  diagnosis.py  graph.py  router.py
yixiutong-mvp/apps/api/app/core/: config.py  storage.py
yixiutong-mvp/apps/api/app/models/: feedback.py  schemas.py
yixiutong-mvp/apps/api/app/providers/: base.py  factory.py  json_utils.py  ollama.py  openai_compatible.py
yixiutong-mvp/apps/api/app/repositories/: agent_runtime.py  corpus.py  feedback.py  portal.py
yixiutong-mvp/apps/web/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json
yixiutong-mvp/apps/web/src/: App.tsx
yixiutong-mvp/scripts/: build_index.py  demo_bootstrap.ps1  download_local_model.ps1  download_local_model.py  register_ollama_model.ps1  run_api.ps1  run_web.ps1  start_ollama.ps1  start_yixiutong.cmd  start_yixiutong.ps1  validate_primary_provider.ps1  validate_primary_provider.py
yixiutong-mvp/tests/api/: test_agent_runtime_api.py  test_portal_oa_api.py  test_workflow_api.py
yixiutong-mvp/tests/unit/: test_audit_policy.py  test_confidence.py  test_diagnosis.py  test_graph_deadline.py  test_graph_workflow.py  test_json_utils.py  test_paths.py  test_provider_factory.py  test_provider_runtime.py  test_provider_runtime_retry.py  test_reranker.py  test_retrieval.py  test_router.py  test_scene_rules.py  test_space_guard.py
(+73 files in other folders)
