[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yixiutong-mvp"
version = "0.1.0"
description = "翼修通比赛版 MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "httpx>=0.27,<1.0",
  "langgraph>=0.2,<1.0",
  "huggingface_hub>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "apps/api"
]
testpaths = [
  "tests"
]
